--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
-    <style>
+    <!-- <style>
       .cover-container {
         position: relative;
         text-align: center;
@@ -34,7 +34,7 @@
           font-size: 3.5rem;
         }
       }
-    </style>
+    </style> -->
 
 
     
@@ -44,6 +44,7 @@
   <body class="d-flex h-100 text-center text-white bg-dark">
     
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
   <header class="mb-auto">
     <div>
       <h3 class="float-md-start mb-0">Home</h3>
@@ -51,37 +52,27 @@
         <a class="nav-link active" aria-current="page" href="#">About</a>
         <a class="nav-link" href="#">Visualizations</a>
         <a class="nav-link" href="#">Team</a>
-        <img src="Resources/wines_image.jpg" alt="Wine Glasses">
       </nav>
     </div>
   </header>
 
-  <main class="px-3">
-    <h1>Wine Quality</h1>
-    <p class="lead">Predicting Wine Quality with Machine Learning</p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Get Started</a>
-    </p>
-  </main>
+  <div class="card bg-dark text-white">
+    <img src="Resources/wines_image.jpg" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <main class="px-3">
+        <h1>Wine Quality</h1>
+        <p class="lead">Predicting Wine Quality with Machine Learning</p>
+        <p class="lead">
+          <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Get Started</a>
+        </p>
+      </main>
+    </div>
+  </div>
+
+
   <div class="container">
     <div class='tableauPlaceholder' id='viz1637631956970' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wi&#47;WineDashboard_16366700927230&#47;Winestory&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='WineDashboard_16366700927230&#47;Winestory' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wi&#47;WineDashboard_16366700927230&#47;Winestory&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1637631956970');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-  <!-- <div class='tableauPlaceholder' id='viz1637295281905' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;38&#47;389ZCXF5Z&#47;1_rss.png' style='border: none' /></a></noscript>
-    <object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> 
-      <param name='path' value='shared&#47;389ZCXF5Z' /> <param name='toolbar' value='yes' />
-      <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;38&#47;389ZCXF5Z&#47;1.png' /> 
-      <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
-      <param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><
-      param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' />
-    </object>
-    </div>                
-    <script type='text/javascript'>                    
-    var divElement = document.getElementById('viz1637295281905');                    
-    var vizElement = divElement.getElementsByTagName('object')[0];                    
-    vizElement.style.width='1016px';vizElement.style.height='991px';                    
-    var scriptElement = document.createElement('script');                    
-    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-    </script> -->
+
   <footer class="mt-auto text-white-50">
     <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
   </footer>
