updated index.html font, size and color

--- a/index1_pl.html
+++ b/index1_pl.html
@@ -40,8 +40,11 @@
     <img src="Resources/wines_image.jpg" class="card-img" alt="...">
     <div class="card-img-overlay">
       <main class="px-3">
-        <h1>Wine Quality</h1>
-        <h2 class="lead">Predicting Wine Quality with Machine Learning</h2>
+        <p style="font-size:5vw; color: olive; font-family: 'Lucida Handwriting'">Predicting Wine Quality with Machine Learning</p>
+        <!-- <h1>Wine Quality</h1> -->
+        <p style="font-size: 2vw;">Wine Quality</p>
+        <!-- <h2 class="lead">Predicting Wine Quality with Machine Learning</h2> -->
+        
         <p class="lead">
           <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Get Started</a>
         </p>
@@ -53,12 +56,17 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-8">
-                <h2 class="text-white mb-4">Project Overview</h2>
-                <p class="text-white-50">
+                <!-- <h2 class="text-white mb-4">Project Overview</h2> -->
+                <p style="font-size: 2vw;">Project Overview</p>
+                <!-- <p class="text-white-50 lead">
                     The goal of our project was to compare the performance of various machine learning classification models. The data used are quality ratings for red and white wine based on 11 chemical measurements in wine. Red and white 
-                    wine models are analyzed separately. There are 11 features for each wine type. Ten machine learning models were used.
+                    wine models are analyzed separately. There are 11 features for each wine type. Ten machine learning models were used. -->
 
-                    <br> <br>Our datasets can be found here: 
+                <p style="font-size: 1vw; color: whitesmoke">The goal of our project was to compare the performance of various machine learning classification models. The data used are quality ratings for red and white wine based on 11 chemical measurements in wine. Red and white 
+                  wine models are analyzed separately. There are 11 features for each wine type. Ten machine learning models were used.</p>
+
+                    <br> <br>
+                    <p style= "font-size: 1vw;">Our datasets can be found here:</p> 
                     <br> <br>
                     <a href="https://www.kaggle.com/uciml/red-wine-quality-cortez-et-al-2009">Red wine data.</a>
                     <br> <br>
