--- a/index1_pl.html
+++ b/index1_pl.html
@@ -31,7 +31,7 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#about">About</a>
         <a class="nav-link" href="#viz">Visualizations</a>
-        <a class="nav-link" href="#">Team</a>
+        <a class="nav-link" href="#team">Team</a>
       </nav>
     </div>
   </header>
@@ -112,7 +112,22 @@
     The dashboard is also available on Tableau Public:
     <a href="https://public.tableau.com/views/WineDashboard_16366700927230/Winestory?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link">Wine Story</a>
   </p>
-
+<section class="about-section text-center" id="team">
+  <div class="row">
+    <div class="col-md-12 footer">
+      <p style="font-size: 1vw;">
+        Group Members: 
+        <a href="https://github.com/obriencw">Corey O'Brien</a>
+        , 
+        <a href="https://github.com/PGL50">Paula Lindgren</a>
+        , 
+        <a href="https://github.com/Qian8988">Quinn Dong</a>
+        , 
+        <a>Nicole Steele</a>
+      </p>
+    </div>
+  </div>
+</section>
 
   <!-- <div class="container col-lg-12">
     <div class='tableauPlaceholder-fluid' id='viz1637631956970' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wi&#47;WineDashboard_16366700927230&#47;Winestory&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='WineDashboard_16366700927230&#47;Winestory' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wi&#47;WineDashboard_16366700927230&#47;Winestory&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1637631956970');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> -->
