--- a/index1_pl.html
+++ b/index1_pl.html
@@ -37,7 +37,7 @@
   </header>
 
   <div class="card bg-dark text-white">
-    <img src="Resources/wines_image.jpg" class="card-img" alt="...">
+    <img src="Resources/wines1_image.jpg" class="card-img" alt="...">
     <div class="card-img-overlay">
       <main class="px-3">
         <p style="font-size:5vw; color: olive; font-family: 'Lucida Handwriting'">Predicting Wine Quality with Machine Learning</p>
@@ -112,19 +112,27 @@
     The dashboard is also available on Tableau Public:
     <a href="https://public.tableau.com/views/WineDashboard_16366700927230/Winestory?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link">Wine Story</a>
   </p>
+
 <section class="about-section text-center" id="team">
-  <div class="row">
-    <div class="col-md-12 footer">
-      <p style="font-size: 1vw;">
-        Group Members: 
-        <a href="https://github.com/obriencw">Corey O'Brien</a>
-        , 
-        <a href="https://github.com/PGL50">Paula Lindgren</a>
-        , 
-        <a href="https://github.com/Qian8988">Quinn Dong</a>
-        , 
-        <a>Nicole Steele</a>
-      </p>
+  <div class="card bg-dark text-dark">
+    <img src="Resources/wines_image.jpg" class="card-img" alt="..." style="width:800px;height:400px;">
+    <div class="card-img-overlay">
+      <main class="px-3">
+        <div class="row">
+          <div class="col-md-12 footer">
+            <p style="font-size: 1vw;">
+              Group Members:  
+              <a href="https://github.com/PGL50">Paula Lindgren</a>
+              , 
+              <a href="https://github.com/obriencw">Corey O'Brien</a>
+              ,
+              <a href="https://github.com/Qian8988">Quinn Dong</a>
+              , 
+              <a>Nicole Steele</a>
+            </p>
+          </div>
+        </div>
+      </main>
     </div>
   </div>
 </section>
