--- a/index1_pl.html
+++ b/index1_pl.html
@@ -21,15 +21,17 @@
   
 
   </head>
-  <body class="d-flex h-100 text-center text-white bg-dark">
+  <body id="page-top" class="d-flex h-100 text-center text-white bg-dark">
     
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
   <header class="mb-auto">
     <div class="topnav-right">
-      <h3 class="float-md-start mb-0">Home</h3>
+      <!-- <h3 class="float-md-start mb-0">Home</h3> -->
+
       <!-- <nav class="nav nav-masthead justify-content-center float-md-end"> -->
       <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <a class="nav-link" href="#page-top">Home</a>
         <a class="nav-link active" aria-current="page" href="#about">About</a>
         <a class="nav-link" href="#viz">Visualizations</a>
         <a class="nav-link" href="#team">Team</a>
