--- a/index1_pl.html
+++ b/index1_pl.html
@@ -43,7 +43,7 @@
     <img src="Resources/wines1_image.jpg" class="card-img" alt="...">
     <div class="card-img-overlay">
       <main class="px-3">
-        <p style="font-size:5vw; color: olive; font-family: 'Lucida Handwriting'">Predicting Wine Quality with Machine Learning</p>
+        <p style="font-size:5vw; color: olive; font-family: 'Lucida Handwriting'">Modeling Wine Quality with Machine Learning</p>
         <!-- <h1>Wine Quality</h1> -->
         <p style="font-size: 2vw;">Wine Quality</p>
         <!-- <h2 class="lead">Predicting Wine Quality with Machine Learning</h2> -->
