--- a/index1_pl.html
+++ b/index1_pl.html
@@ -65,7 +65,7 @@
                     The goal of our project was to compare the performance of various machine learning classification models. The data used are quality ratings for red and white wine based on 11 chemical measurements in wine. Red and white 
                     wine models are analyzed separately. There are 11 features for each wine type. Ten machine learning models were used. -->
 
-                <p style="font-size: 1vw; color: whitesmoke">The goal of our project was to compare the performance of various machine learning classification models. The data used are quality ratings for red and white wine based on 11 physicochemical measurements in wine. Red and white 
+                <p style="font-size: 1vw; color: whitesmoke">The goal of our project was to compare the performance of various machine learning classification models. The data used are quality ratings for red and white wine based on 11 physicochemical measurements in the wines. Red and white 
                   wine models are analyzed separately. There are 11 features for each wine type. Ten machine learning models were used.</p>
 
                     <br> <br>
