--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- <h2 class="lead">Predicting Wine Quality with Machine Learning</h2> -->
         
         <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Get Started</a>
+          <!-- <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Get Started</a> -->
         </p>
       </main>
     </div>
