--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
 <br/>
 <br/>
 
+<div class="HeatmapRed">
+  <img src="Resources/red_map.png" class="card-img" alt="...">
+</div>
+
 <div class="TableauPlaceholder-fluid" id="viz"></div>
   <noscript></noscript>
   <script src="https://us-east-1.online.tableau.com/javascripts/api/tableau-2.min.js"></script>
