heatmap red sized

--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
 <br/>
 
 <div class="HeatmapRed">
-  <img src="Resources/red_map.png" class="card-img" alt="...">
+  <img src="Resources/red_map.png" class="card-img" alt="..." style="width:800px;height:400px;">
 </div>
+
+<br/>
+<br/>
+<br/>
 
 <div class="TableauPlaceholder-fluid" id="viz"></div>
   <noscript></noscript>
