--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
     <div class="col-xl-8 col-lg-7">
       <div class="HeatmapRed">
-        <img src="Resources/red_map.png" class="card-img" alt="..." style="width:800px;height:400px;">
+        <img class="img-fluid mb-3 mb-lg-0" src="resources/red_map.png" alt="..." style="width:800px;height:400px;">
       </div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
