--- a/index.html
+++ b/index.html
@@ -89,16 +89,30 @@
 <div class="container px-4 px-lg-5">
   <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
     <div class="col-xl-8 col-lg-7">
-      <div class="HeatmapRed">
         <img class="img-fluid mb-3 mb-lg-0" src="resources/red_map.png" alt="..." style="width:800px;height:400px;">
-      </div>
-      <div class="col-xl-4 col-lg-5">
-        <div class="featured-text text-center text-lg-left">
-          <h4>Red Wine Heatmap</h4>
-          <p class="text-white-50 mb-0">
+    </div>
+    <div class="col-xl-4 col-lg-5">
+      <div class="featured-text text-center text-lg-left">
+        <h4>Red Wine Heatmap</h4>
+        <p class="text-white-50 mb-0">
             Look at our red wine heatmap
-          </p>
-        </div>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container px-4 px-lg-5">
+  <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+    <div class="col-xl-8 col-lg-7">
+        <img class="img-fluid mb-3 mb-lg-0" src="resources/white_map.png" alt="..." style="width:800px;height:400px;">
+    </div>
+    <div class="col-xl-4 col-lg-5">
+      <div class="featured-text text-center text-lg-left">
+        <h4>White Wine Heatmap</h4>
+        <p class="text-white-50 mb-0">
+            Look at our white wine heatmap
+        </p>
       </div>
     </div>
   </div>
