--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <a class="nav-link" style="font-size:1vw; color:whitesmoke" href="#page-top">Home</a>
         <a class="nav-link active" style="font-size:1vw; color:whitesmoke" aria-current="page" href="#about">About</a>
-        <a class="nav-link" style="font-size:1vw; color:whitesmoke" href="#viz">Visualizations</a>
+        <a class="nav-link" style="font-size:1vw; color:whitesmoke" href="#viz">Dashboard</a>
         <a class="nav-link" style="font-size:1vw; color:whitesmoke" href="#team">Team</a>
       </nav>
     </div>
