--- a/index.html
+++ b/index.html
@@ -65,14 +65,38 @@
                 <p style="font-size: 1vw; color: whitesmoke">The goal of our project was to compare the performance of various machine learning classification models. The data used are quality ratings for red and white wine based on 11 physicochemical measurements in the wines. Red and white 
                   wine models are analyzed separately. There are 11 features for each wine type. Ten machine learning models were used.</p>
 
-                    <br> <br>
+                    <br>
                     <p style= "font-size: 1vw;">Our datasets can be found here:</p> 
-                    <br> <br>
+                    <br>
                     <a href="https://www.kaggle.com/piyushgoyal443/red-wine-dataset" class="link-danger" style="font-size: 20px;">Red wine data.</a>
-                    <br> <br>
+                    <br>
                     <a href="https://www.kaggle.com/piyushagni5/white-wine-quality" class="link-warning" style="font-size: 20px;">White wine data.</a>
-                    
-                <!-- </p> -->
+            <br/>
+            <br/>
+            <br/>
+ 
+                <p style="font-size: 1vw; color: whitesmoke">
+                  The features used in this model:
+                </p>
+                <ul>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> fixed acidity </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> volatile acidity </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> citric acid </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> residual sugar </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> chlorides </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> free sulfur dioxide </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> total sulfur dioxide </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> density </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> pH </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> sulphates </li>
+                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> alcohol </li>
+
+                </ul>
+
+                <p style="font-size: 1vw; color: whitesmoke">
+                  Target: recoded quality score (0-6 = Good (1) and 7+= Not Good (0))
+                </p>
+             
             </div>
         </div>
     </div>
@@ -123,6 +147,22 @@
 
   </div>
 </div>
+
+<p style="font-size: 1vw; color: whitesmoke">
+  Machine Learning Classification Models:
+</p>
+<ul>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Logistic </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Support Vector Machines </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Decision Tree </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Random Forest </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Gradient Boosted Tree </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Logisitic-Random Oversampling </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Logistic-Synthetic Minority Over-sampling Technique </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Logistic-Cluster centroid Undersampling </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Balanced Random Forest Classifier </li>
+  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> Easy Ensemble Ada Boost Classifier </li>
+</ul>
 
 <br/>
 <br/>
