--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </ul>
 
                 <p style="font-size: 1vw; color: whitesmoke">
-                  Target: recoded quality score (0-6 = Good (1) and 7+= Not Good (0))
+                  Target: recoded quality score (0-6 = Not Good (0) and 7+= 0Good (1))
                 </p>
              
             </div>
