--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <br/>
  
                 <p style="font-size: 1vw; color: whitesmoke">
-                  The features used in this model:
+                  The features used in the models:
                 </p>
                 <ul>
                   <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> fixed acidity </li>
