--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   wine models are analyzed separately. There are 11 features for each wine type. Ten machine learning models were used.</p>
 
                     <br>
-                    <p style= "font-size: 1vw;">Our datasets can be found here:</p> 
+                    <p style= "font-size: 1vw;">The datasets can be found here:</p> 
                     <br>
                     <a href="https://www.kaggle.com/piyushgoyal443/red-wine-dataset" class="link-danger" style="font-size: 20px;">Red wine data.</a>
                     <br>
@@ -79,17 +79,17 @@
                   The features used in the models:
                 </p>
                 <ul>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> fixed acidity </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> volatile acidity </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> citric acid </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> residual sugar </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> chlorides </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> free sulfur dioxide </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> total sulfur dioxide </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> density </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> pH </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> sulphates </li>
-                  <li style="font-size: 15px; color: whitesmoke; list-style-type:none"> alcohol </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> fixed acidity </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> volatile acidity </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> citric acid </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> residual sugar </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> chlorides </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> free sulfur dioxide </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> total sulfur dioxide </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> density </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> pH </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> sulphates </li>
+                  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> alcohol </li>
 
                 </ul>
 
@@ -149,19 +149,19 @@
   Machine Learning Classification Models:
 </p>
 <ul>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Logistic </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Support Vector Machines </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Decision Tree </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Random Forest </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Gradient Boosted Tree </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Logisitic-Random Oversampling </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Logistic-Synthetic Minority Over-sampling Technique </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Logistic-Cluster centroid Undersampling </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Balanced Random Forest Classifier </li>
-  <li style="font-size: 16px; color: whitesmoke; list-style-type:none"> Easy Ensemble Ada Boost Classifier </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Logistic </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Support Vector Machines </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Decision Tree </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Random Forest </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Gradient Boosted Tree </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Logisitic-Random Oversampling </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Logistic-Synthetic Minority Over-sampling Technique </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Logistic-Cluster centroid Undersampling </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Balanced Random Forest Classifier </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Easy Ensemble Ada Boost Classifier </li>
 </ul>
 
-<p style="font-size: 1vw; color: whitesmoke">
+<p style="font-size: 20px; color: whitesmoke">
   Target: recoded quality score (0-6 = Not Good (0) and 7+= Good (1))
 </p>
 
