--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Decision Tree </li>
   <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Random Forest </li>
   <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Gradient Boosted Tree </li>
-  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Logisitic-Random Oversampling </li>
+  <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Logistic-Random Oversampling </li>
   <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Logistic-Synthetic Minority Over-sampling Technique </li>
   <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Logistic-Cluster centroid Undersampling </li>
   <li style="font-size: 20px; color: whitesmoke; list-style-type:none"> Balanced Random Forest Classifier </li>
