--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
     </div>
     <div class="col-xl-4 col-lg-5">
       <div class="featured-text text-center text-lg-left">
-        <h4>Red Wine Heatmap</h4>
-        <p class="text-white-50 mb-0">
-            Look at our red wine heatmap
+        <h3>Red Wine Heatmap</h3>
+        <p class="text-white-50 mb-0" style="font-size: 20px">
+          Looking across the quality rating row there are two features with the highest correlations. The correlation for pH is positive = 0.48. As the pH level of wine increases the rating also increases. Volatile acidity has the largest negative correlation = -0.39. Quality ratings decrease as volatile acidity increases.
         </p>
       </div>
     </div>
@@ -131,9 +131,9 @@
   <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
     <div class="col-xl-4 col-lg-5">
       <div class="featured-text text-center text-lg-left">
-        <h4>White Wine Heatmap</h4>
-        <p class="text-white-50 mb-0">
-            Look at our white wine heatmap
+        <h3>White Wine Heatmap</h3>
+        <p class="text-white-50 mb-0" style="font-size: 20px">
+          Looking across the quality rating row for white wine there are two features with the highest correlations. The correlation for pH is positive = 0.44. As the pH level of white wine increases the rating also increases. Desity has the largest negative correlation = -0.31. Quality ratings decrease as density increases.
         </p>
       </div>
     </div>
