--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <div class="container px-4 px-lg-5">
   <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
     <div class="col-xl-8 col-lg-7">
-        <img class="img-fluid mb-3 mb-lg-0" src="Resources/red_map.png" alt="..." style="width:800px;height:400px;">
+        <img class="img-fluid mb-3 mb-lg-0" src="Resources/red_map1.png" alt="..." style="width:800px;height:400px;">
     </div>
     <div class="col-xl-4 col-lg-5">
       <div class="featured-text text-center text-lg-left">
@@ -139,7 +139,7 @@
     </div>
 
     <div class="col-xl-8 col-lg-7">
-        <img class="img-fluid mb-3 mb-lg-0" src="Resources/white_map.png" alt="..." style="width:800px;height:400px;">
+        <img class="img-fluid mb-3 mb-lg-0" src="Resources/white_map1.png" alt="..." style="width:800px;height:400px;">
     </div>
 
   </div>
