--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p style="font-size: 2vw;">Project Overview</p>
 
                 <p style="font-size: 1vw; color: whitesmoke">The goal of our project was to compare the performance of various machine learning classification models. The data used are quality ratings (0 to 10) for red and white wine based on 11 physicochemical measurements in the wines. Red and white 
-                  wine models are analyzed separately. There are 11 features for each wine type. Ten machine learning models were used.</p>
+                  wine models are analyzed separately. There are 11 features for each wine type. Ten supervised machine learning models were used.</p>
 
                     <br>
                     <p style= "font-size: 1vw;">The datasets can be found here:</p> 
