added github logo after group member names

--- a/index.html
+++ b/index.html
@@ -212,10 +212,13 @@
             <p style="font-size: 20px; color: whitesmoke">
               Group Members:  
               <a href="https://github.com/PGL50" style="font-size: 20px; color: whitesmoke">Paula Lindgren</a>
+              <img src="Resources/github_logo.png" alt="..." style="width:30px;height:30px;">
               , 
               <a href="https://github.com/obriencw" style="font-size: 20px; color: whitesmoke">Corey O'Brien</a>
+              <img src="Resources/github_logo.png" alt="..." style="width:30px;height:30px;">
               ,
               <a href="https://github.com/Qian8988" style="font-size: 20px; color: whitesmoke">Quinn Dong</a>
+              <img src="Resources/github_logo.png" alt="..." style="width:30px;height:30px;">
               , 
               <a>Nicole Steele</a>
             </p>
