--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="featured-text text-center text-lg-left">
         <h3>White Wine Heatmap</h3>
         <p class="text-white-50 mb-0" style="font-size: 20px">
-          Looking across the quality rating row for white wine there are two features with the highest correlations. The correlation for pH is positive = 0.44. As the pH level of white wine increases the rating also increases. Desity has the largest negative correlation = -0.31. Quality ratings decrease as density increases.
+          Looking across the quality rating row for white wine there are two features with the highest correlations. The correlation for pH is positive = 0.44. As the pH level of white wine increases the rating also increases. Density has the largest negative correlation = -0.31. Quality ratings decrease as density increases.
         </p>
       </div>
     </div>
